--- a/src/templates/screens/secure/MoveIssue2.vm
+++ b/src/templates/screens/secure/MoveIssue2.vm
@@ -1,9 +1,9 @@
-#set ( $action = $link.setPage("MoveIssue2.vm").setAction("MoveIssue").addPathInfo("nextTemplate", "Links.vm") )
+#set ($action = $link.setPage("MoveIssue2.vm").setAction("MoveIssue").addPathInfo("nextTemplate", "Links.vm"))
 
-#set ($user = $scarabR.User)
-#set ( $issueId = $data.Parameters.getString("issue_id") )
-#set ( $issue = $scarabR.getIssue($issueId) )
-#set ( $moduleId = $data.Parameters.getString("module_id") )
+#set ($user = $data.User)
+#set ($issueId = $data.Parameters.getString("issue_id"))
+#set ($issue = $scarabR.getIssue($issueId))
+#set ($moduleId = $data.Parameters.getString("module_id"))
 #set ($module = $user.CurrentModule)
 
 <form method="post" action="$action" >
