the formatting of dates is in the presentation layer.
instead of having to put a method into each BO, it is better to allow
people to specify this within the templates by using a Format tool. the
format of the date is held as a constant in ScarabConstants.

as we need more formatting tasks, please add them to the Format.java
class.

-jon

--- a/src/templates/ViewIssueMacro.vm
+++ b/src/templates/ViewIssueMacro.vm
@@ -351,7 +351,7 @@
 
     #foreach($comment in $currentIssue.Comments)
         <tr>
-         <th width="60">$comment.FormattedCreatedDate 
+         <th width="60">$format.getDate($scarabG.Constant.MDYY_DATE, $comment.CreatedDate)
        #set ( $commentUser = $scarabR.getUser($comment.CreatedBy) )
          <a href="mailto:$commentUser.Email">$commentUser.UserName</a>
          </th>
@@ -411,7 +411,7 @@
          #end
           <td width="120">
             #if( $act.Transaction)
-              $act.Transaction.FormattedCreatedDate
+              $format.getDate($scarabG.Constant.MDYY_DATE, $act.Transaction.CreatedDate)
             #end
           </td>
           <td width="120">$act.Description 
