--- a/src/templates/screens/Register.vm
+++ b/src/templates/screens/Register.vm
@@ -8,8 +8,10 @@
    <p>$data.getMessage()</p>
    #end 
 
-   <form name="RegisterForm" action="$link.setPage("register.vm")" method="post">
-    <input type="hidden" name="action" value="Register" /> <input type="hidden" name="nextTemplate" value="RegisterConfirm.vm" /> <input type="hidden" name="cancelTemplate" value="Login.vm" /> 
+   <form name="RegisterForm" action="$link.setPage("Register.vm")" method="post">
+    <input type="hidden" name="action" value="Register" /> 
+    <input type="hidden" name="nextTemplate" value="RegisterConfirm.vm" /> 
+    <input type="hidden" name="cancelTemplate" value="Login.vm" /> 
 ## Attempt to populate the Scarab API User object on re-display $data.Parameters.setProperties($scarabR.getUser()) 
 
     <div class="axial">
