--- a/src/templates/screens/secure/MoveIssue.vm
+++ b/src/templates/screens/secure/MoveIssue.vm
@@ -32,7 +32,7 @@
            $attVal.Value</a>
          </td>  
 
-         <td>$format.getDate($scarabG.Constant.MDYY_DATE, $issue.CreatedDate)</td>
+         <td>$format.getDate($scarabG.DateFormat, $issue.CreatedDate)</td>
 
          <td>
              #set ($createdUser = $scarabR.getUser($issue.CreatedBy.toString()) )
