--- a/src/templates/screens/secure/MoveIssue2.vm
+++ b/src/templates/screens/secure/MoveIssue2.vm
@@ -27,7 +27,7 @@
            $attVal.Value
          </td>  
 
-         <td>$format.getDate($scarabG.Constant.MDYY_DATE, $issue.CreatedDate)</td>
+         <td>$format.getDate($scarabG.DateFormat, $issue.CreatedDate)</td>
 
          <td>
              #set ($createdUser = $scarabR.getUser($oldIssue.CreatedBy.toString()) )
