added a link to the javadoc documentation built nightly Issue number: Obtained from: Submitted by: Reviewed by:

--- a/src/templates/screens/Links.vm
+++ b/src/templates/screens/Links.vm
@@ -32,6 +32,13 @@ $page.setTitle("Scarab Links")
 </li>
 </ul>
 
+<h3>Documentation</h3>
+<ul>
+<li>
+    <a href="http://scarab.whichever.com/api/">Javadoc API Documentation</a>
+</li>
+</ul>
+
 <!--
 <p>
 Not working:
