moved the guts of the AdvancedQuery.vm to a macro for use in other templates.
PR:
Obtained from:
Submitted by:
Reviewed by:

--- a/src/templates/screens/AdvancedQuery.vm
+++ b/src/templates/screens/AdvancedQuery.vm
@@ -1,11 +1,8 @@
-#set ( $search = $scarabR.Search )
-#set ( $query = $intake.SearchIssue.mapTo($search) )
-#set ($attrValues = $search.ModuleAttributeValuesMap)
-
 <div class="app" id="advancedquery">
 <h2>Advanced Query (2.2.0)</h2>
 
 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip</p>
+
 
 <form action="$link.setPage("AdvancedQuery.vm")" method="get">
 <input type="hidden" name="nextTemplate" value="IssueList.vm" />
@@ -19,234 +16,11 @@
 
 <h3>Search the Scarab Knowledge Base</h3>
 
-<div class="axial">
-<table width="100%" cellpadding="3" cellspacing="2" border="1">
-    <tr>
-         <th width="120">issue ID# range:</th>
+#set ( $search = $scarabR.Search )
+#set ( $query = $intake.SearchIssue.mapTo($search) )
+#set ($attrValues = $search.ModuleAttributeValuesMap)
 
-         <td>
-         from:&#160;<input type="text" size="20" 
-             name="$query.MinId.Key" value="$query.MinId" />
-         &#160;&#160;to:&#160;<input type="text" size="20"
-             name="$query.MaxId.Key" value="$query.MaxId" />
-         </td>
-    </tr>
-
-    <tr>
-         <th width="120">issue creation date range:</th>
-
-         <td>
-         from:&#160;<input type="text" size="20"
-             name="$query.MinDate.Key" value="$query.MaxDate" />
-         &#160;&#160;to:&#160;<input type="text" size="20"
-             name="$query.MaxDate.Key" value="$query.MinDate" />
-         </td>
-    </tr>
-
-
-#foreach ( $attKey in $attrValues.sequence() )
-  #set ( $attVal = $attrValues.get($attKey) )
-  #set ( $attrInput = $intake.AttributeValue.mapTo($attVal) ) 
-
-  #if ( $attVal.Attribute.AttributeType.ValidationKey )
-        #set ( $field = $attVal.Attribute.AttributeType.ValidationKey )
-  #elseif ($attVal.Attribute.AttributeType.Name == "combo-box" )
-        #set ( $field = "OptionId" )
-  #else
-        #set ( $field = "Value" )  
-  #end
-
-  #if ( !$attVal.isSet() )
-
-        <tr>
-         <th width="120">$attVal.Attribute.Name:</th>
-
-            <td>
-    #attrValueErrorMsg ( $attVal $field )
-
-    #if ($attVal.Attribute.AttributeType.AttributeClass.Name == "user")
-
-          #userSelectBox ($attVal "")
-
-    #elseif ($attVal.Attribute.AttributeType.Name == "combo-box" )
-
-          #attrValueLeafSelect ($attVal $field "")
-
-    #else
-
-        #if ($attVal.Attribute.AttributeType.Name == "long-string" )        
-
-            <textarea name= "$attrInput.Value.Key" class="text" cols="40"
-               rows="4">$!attrInput.Value</textarea>
-        #else
-
-           <input name= "$attrInput.Value.Key"
-                value="$!attrInput.Value" size="25" type="text" class="text" />
-        #end
-
-    #end
-            </td>
-        </tr>
-  #end
-#end
-
-        <tr>
-         <th width="120">URL:</th>
-
-         <td><input type="text" size="25" value="http://" /></td>
-        </tr>
-
-</table>
-</div>
-
-
-
-       <h3>State change query</h3>
-        <div class="axial">
-       <table width="100%" cellpadding="3" cellspacing="2" border="1">
-
-
-        <tr>
-         <th width="120">attribute:</th>
-
-         <td>
-             <select name="$query.StateChangeAttributeId.Key">
-
-#foreach ( $attKey in $attrValues.sequence() )
-    #set ( $attVal = $attrValues.get($attKey) )
-    #if ($attVal.Attribute.AttributeType.Name == "combo-box" )
-        #set ( $attrInput = $intake.AttributeValue.mapTo($attVal) ) 
-        #set ( $selected = "" )
-        #if ( $query.StateChangeAttributeId.Value == $attVal.AttributeId )
-		    #set ( $selected = ' selected="selected"' )
-            #set ( $selectedAttribute = $attVal.Attribute )
-	    #end
-				<option$selected value="$attVal.AttributeId">
-				    $attVal.Attribute.Name
-                </option>
-    #end
-#end
-
-             </select>
-
-             <input name="eventSubmit_doUpdateStateChangeAttribute"
-                value="Update Options" type="submit" />
-         </td>
-        </tr>
-
-
-        <tr>
-         <th width="120">state change query:</th>
-
-         <td>
-
-          <select name="$query.StateChangeFromOptionId.Key">
-
-    #set ( $selected = "" )
-    #if ( !$attrInput.get("OptionId").Value )
-		#set ( $selected = ' selected="selected"' )
-	#end
-				<option$selected value="">Old Value...</option>
-
-#foreach ($option in $module.getLeafRModuleOptions($selectedAttribute))
-    #set ( $selected = "" )
-    #if ( $attrInput.get("OptionId").Value && $option.OptionId == $attrInput.get("OptionId").Value )
-		#set ( $selected = ' selected="selected"' )
-	#end
-				<option$selected value="$option.OptionId">
-				    $option.DisplayValue
-                </option>
-#end
-
-             </select> to 
-
-             <select name="$query.StateChangeToOptionId.Key">
-
-    #set ( $selected = "" )
-    #if ( !$attrInput.get("OptionId").Value )
-		#set ( $selected = ' selected="selected"' )
-	#end
-				<option$selected value="">Current Value...</option>
-
-#foreach ($option in $module.getLeafRModuleOptions($selectedAttribute))
-    #set ( $selected = "" )
-    #if ( $attrInput.get("OptionId").Value && $option.OptionId == $attrInput.get("OptionId").Value )
-		#set ( $selected = ' selected="selected"' )
-	#end
-				<option$selected value="$option.OptionId">
-				    $option.DisplayValue
-                </option>
-#end
-
-             </select>
-
-           </td>
-        </tr>  
-        
-        <tr>
-           <th width="120">date range:<br />(e.g. MM/DD/YYYY hh:mm)</th>
-
-           <td>          
-           
-               <input type="text" size=9 name="$query.StateChangeFromDate.Key" 
-                   value="$query.StateChangeFromDate">&nbsp;
-               to
-               <input type="text" size=9 name="$query.StateChangeToDate.Key" 
-                   value="$query.StateChangeToDate">
-
-           </td>
-        </tr>
-
-       </table>
-      </div>
-
-
-      <h3>search results view prefs</h3>
-        <div class="axial">
-       <table width="100%" cellpadding="3" cellspacing="2" border="1">
-        <tr>
-         <th width="120">sort by:</th>
-
-         <td>
-         <select name="$query.InitialSortAttributeId.Key">
-
-#foreach ( $attKey in $attrValues.sequence() )
-  #set ( $attribute = $attrValues.get($attKey).Attribute )
-
-            <option value="$attribute.AttributeId">
-                $attribute.Name
-            </option>
-
-#end
-         </select>&nbsp;
-
-         <select name="$query.InitialSortPolarity.Key">
-             <option value="asc">
-                 ascending
-             </option>
-
-             <option value="desc">
-                 descending
-             </option>
-         </select>
-         </td>
-    </tr>
-
-    <tr>
-         <th width="120">issues per page:</th>
-
-         <td>
-         <input type="radio" name="$query.ResultsPerPage.Key" value="25" /> 25 
-         <input type="radio" name="$query.ResultsPerPage.Key" value="50" /> 50 
-         <input type="radio" name="$query.ResultsPerPage.Key" value="75" /> 75 
-         <input type="radio" name="$query.ResultsPerPage.Key" 
-             value="100" /> 100
-         </td>
-    </tr>
-
-  </table>
-</div>
-
+#advancedQuery()
 
 <p class="functnbar">
     <input type="submit" name="eventSubmit_doSearch" value="Search" />&#160;
