--- a/src/templates/AdvancedQueryMacro.vm
+++ b/src/templates/AdvancedQueryMacro.vm
@@ -109,7 +109,7 @@
 
              </select>
 
-             <input name="eventSubmit_doUpdateStateChangeAttribute"
+             <input name="eventSubmit_doUpdatestatechangeattribute"
                 value="Update Options" type="submit" />
          </td>
         </tr>
@@ -119,18 +119,17 @@
          <th width="120">state change query:</th>
 
          <td>
-
           <select name="$query.StateChangeFromOptionId.Key">
 
     #set ( $selected = "" )
-    #if ( !$attrInput.get("OptionId").Value )
+    #if ( !$query.StateChangeFromOptionId.Value )
 		#set ( $selected = ' selected="selected"' )
 	#end
-				<option$selected value="">Old Value...</option>
+				<option$selected value="">any value</option>
 
 #foreach ($option in $module.getLeafRModuleOptions($selectedAttribute))
     #set ( $selected = "" )
-    #if ( $attrInput.get("OptionId").Value && $option.OptionId == $attrInput.get("OptionId").Value )
+    #if ( $query.StateChangeFromOptionId.Value && $option.OptionId == $query.StateChangeFromOptionId.Value )
 		#set ( $selected = ' selected="selected"' )
 	#end
 				<option$selected value="$option.OptionId">
@@ -143,14 +142,13 @@
              <select name="$query.StateChangeToOptionId.Key">
 
     #set ( $selected = "" )
-    #if ( !$attrInput.get("OptionId").Value )
+    #if ( !$query.StateChangeToOptionId.Value )
 		#set ( $selected = ' selected="selected"' )
 	#end
-				<option$selected value="">Current Value...</option>
-
+				<option$selected value="">any value</option>
 #foreach ($option in $module.getLeafRModuleOptions($selectedAttribute))
     #set ( $selected = "" )
-    #if ( $attrInput.get("OptionId").Value && $option.OptionId == $attrInput.get("OptionId").Value )
+    #if ( $query.StateChangeToOptionId.Value && $option.OptionId == $query.StateChangeToOptionId.Value )
 		#set ( $selected = ' selected="selected"' )
 	#end
 				<option$selected value="$option.OptionId">
